Added submodule to store performance tests

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "results/reliability"]
 	path = results/reliability
 	url = https://github.com/bornkesselpascal/testresults_reliability.git
+[submodule "results/performance"]
+	path = results/performance
+	url = https://github.com/bornkesselpascal/testresults_performance.git
